kubernetes/apps/whois.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whois
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whois
  namespace: whois
  labels:
    k8s-app: whois
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: whois
  template:
    metadata:
      labels:
        k8s-app: whois
        name: whois
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: msfidelis/whois:v1
        name: whois
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: "256m"
            memory: "512m"
          limits:
            cpu: "512m"
            memory: "1024"
---
kind: Service
apiVersion: v1
metadata:
  name: whois
  namespace: whois
spec:
  selector:
    k8s-app: whois
  ports:
    - protocol: TCP
      port: 8080
      name: web
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whois
  namespace: whois
spec:
  ingressClassName: "traefik-lb"
  rules:
  - http:
      paths:
      - path: "/whois"
        pathType: Prefix
        backend:
          service: 
            name: whois
            port:
              number: 8080
